fix : サイドバーと画像のリンクを修正、altの文章を修正

--- a/src/posts/20240515-bbq.md
+++ b/src/posts/20240515-bbq.md
@@ -3,10 +3,10 @@ title: "BBQをやりました"
 date: 2024-05-16T17:10:00+09:00
 ---
 
-#　 BBQ をやりました
+# BBQ をやりました
 
 BBQ をやりました。久しぶりの開催です。
 
-![これは肉です](/kstmBBQ2024.jpg)
+![BBQで炭火コンロを部員で囲んで火を起こしている写真](/kstmbbq2024/kstmBBQ2024.jpg)
 
 快晴の下、肉をおいしくいただきました。
